janus/janusParser.cpp

// Generated from janus.g4 by ANTLR 4.10


#include "janusListener.h"
#include "janusVisitor.h"

#include "janusParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct JanusParserStaticData final {
  JanusParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  JanusParserStaticData(const JanusParserStaticData&) = delete;
  JanusParserStaticData(JanusParserStaticData&&) = delete;
  JanusParserStaticData& operator=(const JanusParserStaticData&) = delete;
  JanusParserStaticData& operator=(JanusParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag janusParserOnceFlag;
JanusParserStaticData *janusParserStaticData = nullptr;

void janusParserInitialize() {
  assert(janusParserStaticData == nullptr);
  auto staticData = std::make_unique<JanusParserStaticData>(
    std::vector<std::string>{
      "program", "variables", "functions", "function", "statements", "assignmentExpression", 
      "ifConstructor", "ifExpression", "elseExpression", "fiExpression", 
      "loopConstructor", "fromExp", "untilExp", "doExp", "loopExp", "expression", 
      "functionCall", "skip", "assignmentOperator", "relationalOperator", 
      "arithmeticOperator", "bitwiseOperator", "logicalOperator", "operator", 
      "call", "variableName", "functionName"
    },
    std::vector<std::string>{
      "", "'['", "']'", "'procedure'", "'if'", "'('", "')'", "'then'", "'else'", 
      "'fi'", "'from'", "'until'", "'do'", "'loop'", "'skip'", "'+='", "'-='", 
      "'<=>'", "'^='", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", 
      "'+'", "'-'", "'/'", "'%'", "'&'", "'|'", "'^'", "'&&'", "'||'", "'call'", 
      "'uncall'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "Digit", "TextDigit", "WS", "BlockComment", "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  janusParserStaticData = staticData.release();
}

}

janusParser::janusParser(TokenStream *input) : janusParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

janusParser::janusParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  janusParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *janusParserStaticData->atn, janusParserStaticData->decisionToDFA, janusParserStaticData->sharedContextCache, options);
}

janusParser::~janusParser() {
  delete _interpreter;
}

const atn::ATN& janusParser::getATN() const {
  return *janusParserStaticData->atn;
}

std::string janusParser::getGrammarFileName() const {
  return "janus.g4";
}

const std::vector<std::string>& janusParser::getRuleNames() const {
  return janusParserStaticData->ruleNames;
}

const dfa::Vocabulary& janusParser::getVocabulary() const {
  return janusParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView janusParser::getSerializedATN() const {
  return janusParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

janusParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::FunctionsContext* janusParser::ProgramContext::functions() {
  return getRuleContext<janusParser::FunctionsContext>(0);
}

janusParser::VariablesContext* janusParser::ProgramContext::variables() {
  return getRuleContext<janusParser::VariablesContext>(0);
}


size_t janusParser::ProgramContext::getRuleIndex() const {
  return janusParser::RuleProgram;
}

void janusParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void janusParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any janusParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

janusParser::ProgramContext* janusParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, janusParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == janusParser::TextDigit) {
      setState(54);
      variables(0);
    }
    setState(57);
    functions();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariablesContext ------------------------------------------------------------------

janusParser::VariablesContext::VariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::VariableNameContext* janusParser::VariablesContext::variableName() {
  return getRuleContext<janusParser::VariableNameContext>(0);
}

tree::TerminalNode* janusParser::VariablesContext::Digit() {
  return getToken(janusParser::Digit, 0);
}

std::vector<janusParser::VariablesContext *> janusParser::VariablesContext::variables() {
  return getRuleContexts<janusParser::VariablesContext>();
}

janusParser::VariablesContext* janusParser::VariablesContext::variables(size_t i) {
  return getRuleContext<janusParser::VariablesContext>(i);
}


size_t janusParser::VariablesContext::getRuleIndex() const {
  return janusParser::RuleVariables;
}

void janusParser::VariablesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariables(this);
}

void janusParser::VariablesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariables(this);
}


std::any janusParser::VariablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitVariables(this);
  else
    return visitor->visitChildren(this);
}


janusParser::VariablesContext* janusParser::variables() {
   return variables(0);
}

janusParser::VariablesContext* janusParser::variables(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  janusParser::VariablesContext *_localctx = _tracker.createInstance<VariablesContext>(_ctx, parentState);
  janusParser::VariablesContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, janusParser::RuleVariables, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(60);
    variableName();
    setState(64);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(61);
      match(janusParser::T__0);
      setState(62);
      match(janusParser::Digit);
      setState(63);
      match(janusParser::T__1);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(70);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<VariablesContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleVariables);
        setState(66);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(67);
        variables(2); 
      }
      setState(72);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FunctionsContext ------------------------------------------------------------------

janusParser::FunctionsContext::FunctionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::FunctionContext* janusParser::FunctionsContext::function() {
  return getRuleContext<janusParser::FunctionContext>(0);
}

janusParser::FunctionsContext* janusParser::FunctionsContext::functions() {
  return getRuleContext<janusParser::FunctionsContext>(0);
}


size_t janusParser::FunctionsContext::getRuleIndex() const {
  return janusParser::RuleFunctions;
}

void janusParser::FunctionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctions(this);
}

void janusParser::FunctionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctions(this);
}


std::any janusParser::FunctionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitFunctions(this);
  else
    return visitor->visitChildren(this);
}

janusParser::FunctionsContext* janusParser::functions() {
  FunctionsContext *_localctx = _tracker.createInstance<FunctionsContext>(_ctx, getState());
  enterRule(_localctx, 4, janusParser::RuleFunctions);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(73);
      function();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(74);
      function();
      setState(75);
      functions();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

janusParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::FunctionNameContext* janusParser::FunctionContext::functionName() {
  return getRuleContext<janusParser::FunctionNameContext>(0);
}

janusParser::StatementsContext* janusParser::FunctionContext::statements() {
  return getRuleContext<janusParser::StatementsContext>(0);
}


size_t janusParser::FunctionContext::getRuleIndex() const {
  return janusParser::RuleFunction;
}

void janusParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void janusParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


std::any janusParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

janusParser::FunctionContext* janusParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, janusParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(janusParser::T__2);
    setState(80);
    functionName();
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << janusParser::T__3)
      | (1ULL << janusParser::T__9)
      | (1ULL << janusParser::T__13)
      | (1ULL << janusParser::T__34)
      | (1ULL << janusParser::T__35)
      | (1ULL << janusParser::TextDigit))) != 0)) {
      setState(81);
      statements(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

janusParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::AssignmentExpressionContext* janusParser::StatementsContext::assignmentExpression() {
  return getRuleContext<janusParser::AssignmentExpressionContext>(0);
}

janusParser::IfConstructorContext* janusParser::StatementsContext::ifConstructor() {
  return getRuleContext<janusParser::IfConstructorContext>(0);
}

janusParser::LoopConstructorContext* janusParser::StatementsContext::loopConstructor() {
  return getRuleContext<janusParser::LoopConstructorContext>(0);
}

janusParser::FunctionCallContext* janusParser::StatementsContext::functionCall() {
  return getRuleContext<janusParser::FunctionCallContext>(0);
}

janusParser::SkipContext* janusParser::StatementsContext::skip() {
  return getRuleContext<janusParser::SkipContext>(0);
}

std::vector<janusParser::StatementsContext *> janusParser::StatementsContext::statements() {
  return getRuleContexts<janusParser::StatementsContext>();
}

janusParser::StatementsContext* janusParser::StatementsContext::statements(size_t i) {
  return getRuleContext<janusParser::StatementsContext>(i);
}


size_t janusParser::StatementsContext::getRuleIndex() const {
  return janusParser::RuleStatements;
}

void janusParser::StatementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatements(this);
}

void janusParser::StatementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatements(this);
}


std::any janusParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}


janusParser::StatementsContext* janusParser::statements() {
   return statements(0);
}

janusParser::StatementsContext* janusParser::statements(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  janusParser::StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, parentState);
  janusParser::StatementsContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, janusParser::RuleStatements, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case janusParser::TextDigit: {
        setState(85);
        assignmentExpression();
        break;
      }

      case janusParser::T__3: {
        setState(86);
        ifConstructor();
        break;
      }

      case janusParser::T__9: {
        setState(87);
        loopConstructor();
        break;
      }

      case janusParser::T__34:
      case janusParser::T__35: {
        setState(88);
        functionCall();
        break;
      }

      case janusParser::T__13: {
        setState(89);
        skip();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(96);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<StatementsContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleStatements);
        setState(92);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(93);
        statements(2); 
      }
      setState(98);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AssignmentExpressionContext ------------------------------------------------------------------

janusParser::AssignmentExpressionContext::AssignmentExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::VariableNameContext* janusParser::AssignmentExpressionContext::variableName() {
  return getRuleContext<janusParser::VariableNameContext>(0);
}

janusParser::AssignmentOperatorContext* janusParser::AssignmentExpressionContext::assignmentOperator() {
  return getRuleContext<janusParser::AssignmentOperatorContext>(0);
}

std::vector<janusParser::ExpressionContext *> janusParser::AssignmentExpressionContext::expression() {
  return getRuleContexts<janusParser::ExpressionContext>();
}

janusParser::ExpressionContext* janusParser::AssignmentExpressionContext::expression(size_t i) {
  return getRuleContext<janusParser::ExpressionContext>(i);
}


size_t janusParser::AssignmentExpressionContext::getRuleIndex() const {
  return janusParser::RuleAssignmentExpression;
}

void janusParser::AssignmentExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpression(this);
}

void janusParser::AssignmentExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpression(this);
}


std::any janusParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}

janusParser::AssignmentExpressionContext* janusParser::assignmentExpression() {
  AssignmentExpressionContext *_localctx = _tracker.createInstance<AssignmentExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, janusParser::RuleAssignmentExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    variableName();
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == janusParser::T__0) {
      setState(100);
      match(janusParser::T__0);
      setState(101);
      expression(0);
      setState(102);
      match(janusParser::T__1);
    }
    setState(106);
    assignmentOperator();
    setState(107);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfConstructorContext ------------------------------------------------------------------

janusParser::IfConstructorContext::IfConstructorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::IfExpressionContext* janusParser::IfConstructorContext::ifExpression() {
  return getRuleContext<janusParser::IfExpressionContext>(0);
}

janusParser::FiExpressionContext* janusParser::IfConstructorContext::fiExpression() {
  return getRuleContext<janusParser::FiExpressionContext>(0);
}

janusParser::ElseExpressionContext* janusParser::IfConstructorContext::elseExpression() {
  return getRuleContext<janusParser::ElseExpressionContext>(0);
}


size_t janusParser::IfConstructorContext::getRuleIndex() const {
  return janusParser::RuleIfConstructor;
}

void janusParser::IfConstructorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfConstructor(this);
}

void janusParser::IfConstructorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfConstructor(this);
}


std::any janusParser::IfConstructorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitIfConstructor(this);
  else
    return visitor->visitChildren(this);
}

janusParser::IfConstructorContext* janusParser::ifConstructor() {
  IfConstructorContext *_localctx = _tracker.createInstance<IfConstructorContext>(_ctx, getState());
  enterRule(_localctx, 12, janusParser::RuleIfConstructor);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(109);
      ifExpression();
      setState(110);
      fiExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(112);
      ifExpression();
      setState(113);
      elseExpression();
      setState(114);
      fiExpression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfExpressionContext ------------------------------------------------------------------

janusParser::IfExpressionContext::IfExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::ExpressionContext* janusParser::IfExpressionContext::expression() {
  return getRuleContext<janusParser::ExpressionContext>(0);
}

janusParser::StatementsContext* janusParser::IfExpressionContext::statements() {
  return getRuleContext<janusParser::StatementsContext>(0);
}


size_t janusParser::IfExpressionContext::getRuleIndex() const {
  return janusParser::RuleIfExpression;
}

void janusParser::IfExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfExpression(this);
}

void janusParser::IfExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfExpression(this);
}


std::any janusParser::IfExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitIfExpression(this);
  else
    return visitor->visitChildren(this);
}

janusParser::IfExpressionContext* janusParser::ifExpression() {
  IfExpressionContext *_localctx = _tracker.createInstance<IfExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, janusParser::RuleIfExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(janusParser::T__3);
    setState(120);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(119);
      match(janusParser::T__4);
      break;
    }

    default:
      break;
    }
    setState(122);
    expression(0);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == janusParser::T__5) {
      setState(123);
      match(janusParser::T__5);
    }
    setState(126);
    match(janusParser::T__6);
    setState(127);
    statements(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseExpressionContext ------------------------------------------------------------------

janusParser::ElseExpressionContext::ElseExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::StatementsContext* janusParser::ElseExpressionContext::statements() {
  return getRuleContext<janusParser::StatementsContext>(0);
}


size_t janusParser::ElseExpressionContext::getRuleIndex() const {
  return janusParser::RuleElseExpression;
}

void janusParser::ElseExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElseExpression(this);
}

void janusParser::ElseExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElseExpression(this);
}


std::any janusParser::ElseExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitElseExpression(this);
  else
    return visitor->visitChildren(this);
}

janusParser::ElseExpressionContext* janusParser::elseExpression() {
  ElseExpressionContext *_localctx = _tracker.createInstance<ElseExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, janusParser::RuleElseExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(janusParser::T__7);
    setState(130);
    statements(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FiExpressionContext ------------------------------------------------------------------

janusParser::FiExpressionContext::FiExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::ExpressionContext* janusParser::FiExpressionContext::expression() {
  return getRuleContext<janusParser::ExpressionContext>(0);
}


size_t janusParser::FiExpressionContext::getRuleIndex() const {
  return janusParser::RuleFiExpression;
}

void janusParser::FiExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFiExpression(this);
}

void janusParser::FiExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFiExpression(this);
}


std::any janusParser::FiExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<janusVisitor*>(visitor))
    return parserVisitor->visitFiExpression(this);
  else
    return visitor->visitChildren(this);
}

janusParser::FiExpressionContext* janusParser::fiExpression() {
  FiExpressionContext *_localctx = _tracker.createInstance<FiExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, janusParser::RuleFiExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(janusParser::T__8);
    setState(133);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopConstructorContext ------------------------------------------------------------------

janusParser::LoopConstructorContext::LoopConstructorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

janusParser::FromExpContext* janusParser::LoopConstructorContext::fromExp() {
  return getRuleContext<janusParser::FromExpContext>(0);
}

janusParser::UntilExpContext* janusParser::LoopConstructorContext::untilExp() {
  return getRuleContext<janusParser::UntilExpContext>(0);
}

janusParser::DoExpContext* janusParser::LoopConstructorContext::doExp() {
  return getRuleContext<janusParser::DoExpContext>(0);
}

janusParser::LoopExpContext* janusParser::LoopConstructorContext::loopExp() {
  return getRuleContext<janusParser::LoopExpContext>(0);
}


size_t janusParser::LoopConstructorContext::getRuleIndex() const {
  return janusParser::RuleLoopConstructor;
}

void janusParser::LoopConstructorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<janusListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoopConstructor(this);
}
